crates/aranya-policy-compiler/tests/data/type_errors/if_cond_not_bool_invalid_type_1.fail.policy
function f() int {
    return if 0 { :3 } else { :4 }
}
